fixed header bug on safari

--- a/assets/static/css/header.css
+++ b/assets/static/css/header.css
@@ -46,7 +46,7 @@ header a:visited:hover {
   font-family: "Arnold Regular", Monaco, monospace;
   font-variant-caps: small-caps;
   text-transform: lowercase;
-  font-size: .75rem;
+  font-size: .7rem;
   line-height: 2rem;
 }
 
